# backend/src/routes.ts
@@ -12,6 +12,7 @@ import { fetchClassesHandler } from "./api/classSearch.js";
 import { googleAuthHandler } from "./api/auth/google.js";
 import { logoutHandler } from "./api/auth/logout.js";
 import { requireAuth } from "./api/auth/sharedAuth.js";
+import { submitQuestionRatingHandler } from "./api/questionRating.js";
 
 export function addRoutes(app: Application) {
   app.post("/api/hello", requireAuth, helloWorldHandler);
@@ -19,6 +20,11 @@ export function addRoutes(app: Application) {
   app.post("/api/auth/logout", logoutHandler);
   app.post("/api/question", requireAuth, submitQuestionHandler);
   app.get("/api/question", fetchAllQuestionsHandler);
+  app.post(
+    "/api/question/:questionId/rating",
+    requireAuth,
+    submitQuestionRatingHandler,
+  );
   app.post("/api/class", classHandler);
   app.get("/api/class", fetchClassesHandler);
 }
